Revise phrases for keyboard effect in index.html
Updated phrases for keyboard effect with shorter text.

--- a/index.html
+++ b/index.html
@@ -2085,12 +2085,12 @@
 
         // جملة متغيرة بتأثير الكيبورد (نصوص أكثر واقعية)
         const phrases = [
-            "رحلات عمرة منتظمة من الرياض إلى مكة مع حجز فنادق قريبة من الحرم.",
-            "باقات مختلفة للعمرة تناسب الأفراد والعائلات وميزانيات متعددة.",
-            "إمكانية حجز الباص والسكن معًا أو حجز الفنادق فقط حسب رغبتك.",
-            "دعم عبر الهاتف وواتساب للرد على استفساراتك قبل الحجز وبعده.",
-            "خيار الباصات الاقتصادية وباصات VIP لدرجة راحة أعلى أثناء السفر.",
-            "تنظيم واضح لمواعيد الانطلاق والعودة وتفاصيل البرنامج."
+            "رحلات عمرة منتظمة من الرياض إلى مكة .",
+            "باقات مختلفة للعمرة تناسب الأفراد والعائلات .",
+            "إمكانية حجز الباص والسكن معًا  .",
+            "دعم عبر الهاتف وواتساب .",
+            "رحلات عمرة يومية الي مكة.",
+            "تنظيم واضح لمواعيد الانطلاق والعودة  ."
         ];
 
         const typingEl = document.getElementById('hero-typing');
