Modify phrases for Umrah trip descriptions
Updated phrases for the Umrah trips to reflect changes.

--- a/index.html
+++ b/index.html
@@ -2085,8 +2085,8 @@
 
         // جملة متغيرة بتأثير الكيبورد (نصوص أكثر واقعية)
         const phrases = [
-            "رحلات عمرة منتظمة من الرياض إلى مكة .",
-            "باقات مختلفة للعمرة تناسب الأفراد والعائلات .",
+            "رحلات عمرة منتظمة من الرياض   .",
+            "باقات مختلفة تناسب الأفراد والعائلات .",
             "إمكانية حجز الباص والسكن معًا  .",
             "دعم عبر الهاتف وواتساب .",
             "رحلات عمرة يومية الي مكة.",
