--- a/index.html
+++ b/index.html
@@ -1817,7 +1817,7 @@
                         <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/463246228.jpg?k=2e3c3a2267b3e5fbd085c604d8eb14149c86ddcf189569b81172fdeea73e71f0&o=" alt="فندق أنوار مكة">
                     </div>
                     <div class="hotel-content">
-                        <h3 class="hotel-title">فندق أنوار مكة</h3>
+                        <h3 class="hotel-title">فندق فوكو مكة</h3>
                         <div class="hotel-location">
                             <i class="fas fa-map-marker-alt"></i>
                             شارع إبراهيم الخليل، مكة المكرمة
@@ -2039,8 +2039,8 @@
                 © 2025 أنوار الحرم لتنظيم رحلات العمرة من الرياض. جميع الحقوق محفوظة.
                 <br>
                 تصميم وتنفيذ
-                <a href="https://wa.me/966540264746" target="_blank" rel="noopener">
-                    أنوار الحرم
+                <a href="https://wa.me/201025116712" target="_blank" rel="noopener">
+                    عبدالله محمد 
                 </a>
             </div>
         </div>
