Add Holiday Inn hotel card to index.html

--- a/index.html
+++ b/index.html
@@ -1846,6 +1846,42 @@
                         </div>
                     </div>
                 </div>
+                <!-- Hotel 4 - Holiday Inn -->
+<div class="hotel-card">
+    <div class="hotel-image">
+        <div class="hotel-badge">5 نجوم - سلسلة عالمية</div>
+        <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/192866210.jpg?k=3538ae294e6b85e0cd2cb47b3b092b6984c143f2d5a0108e0f1c0bda09129e82&o=" alt="فندق هوليدي ان مكة">
+    </div>
+    <div class="hotel-content">
+        <h3 class="hotel-title">فندق هوليدي إن مكة</h3>
+        <div class="hotel-location">
+            <i class="fas fa-map-marker-alt"></i>
+            منطقة العزيزية، مكة المكرمة
+        </div>
+        <div class="hotel-distance">
+            <i class="fas fa-walking"></i>
+            حوالي 800 متر من الحرم
+        </div>
+        <ul class="hotel-features">
+            <li><i class="fas fa-wifi"></i> واي فاي مجاني عالي السرعة في جميع أنحاء الفندق</li>
+            <li><i class="fas fa-utensils"></i> عدة مطاعم تقدم أطباق عالمية ومحلية</li>
+            <li><i class="fas fa-swimming-pool"></i> مسبح داخلي ومنتجع صحي (سبا)</li>
+            <li><i class="fas fa-dumbbell"></i> صالة ألعاب رياضية مجهزة بأحدث الأجهزة</li>
+            <li><i class="fas fa-concierge-bell"></i> خدمة كونسيرج وترتيب جولات عمرة</li>
+            <li><i class="fas fa-business-time"></i> مركز أعمال وغرف اجتماعات</li>
+        </ul>
+        <div class="hotel-actions">
+            <a href="https://wa.me/966540264746" class="btn btn-whatsapp btn-full">
+                <i class="fab fa-whatsapp"></i>
+                احجز عبر واتساب
+            </a>
+            <a href="tel:0540264746" class="btn btn-dark btn-full">
+                <i class="fas fa-phone-alt"></i>
+                اتصل الان بنا
+            </a>
+        </div>
+    </div>
+</div>
 
                 <!-- Hotel 2 -->
                 <div class="hotel-card">
